Added adding new items.

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">-->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!--	<link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.0.0/css/bootstrap.min.css} ">-->
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="style.css">
 	<title>To Do List</title>
@@ -24,8 +22,10 @@
 					<h6 class="card-subtitle mb-2 text-muted"
 						th:text="${#temporals.format(item.dueDate, 'dd.MM.yyyy')}">Card subtitle</h6>
 					<p class="card-text" th:text="${item.priority}"></p>
-					<a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reg-modal">Go somewhere</a>
-					<a href="#" class="btn btn-secondary">Go somewhere</a>
+					<a class="btn btn-primary" id="buttonEdit" th:href="@{/update(id=${item.id})}">Edit</a>
+					<a th:href="@{/delete(id=${item.id})}"
+					   data-bs-toggle="modal" data-bs-target="#delete-modal"
+					   class="btn btn-warning">Delete</a>
 				</div>
 			</div>
 		</div>
@@ -35,7 +35,6 @@
 			</div>
 			<div class="card text-white bg-primary mb-3" th:each="item : ${items}"
 				 th:if="${item.status} == 'DOING' and ${item.user.id} == ${userId}">
-
 				<div class="card-body">
 					<h5 class="card-title" th:text="${item.name}"></h5>
 					<h6 class="card-subtitle mb-2 text-muted"
@@ -66,9 +65,12 @@
 	</div>
 </div>
 
+<a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-modal">
+	<i class="material-icons">&#xE147;</i>Add new</a>
+
 <table class="table table-bordered" style="float: left;">
 	<tr>
-		<th>Title</th>
+		<th>Name</th>
 		<th>Due Date</th>
 		<th>Priority</th>
 		<th>Status</th>
@@ -105,15 +107,43 @@
 	</tbody>
 </table>
 
-<div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+<div class="modal fade" id="add-modal" tabindex="-1" aria-labelledby="add-modal-title" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="modal-title">Modal title</h5>
+				<h5 class="modal-title" id="add-modal-title">Create New Item</h5>
+
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p>Modal body text goes here.</p>
+				<form th:action="@{/new}" th:object="${item}" method="POST" style="max-width: 600px; margin: 0 auto;">
+					<div class="m-3">
+						<div class="form-group row m-3">
+							<label class="col-form-label col-4">Name</label>
+							<div class="col-8">
+								<input type="text" class="form-control" name="name" required minlength="1" maxlength="100">
+							</div>
+						</div>
+						<div class="form-group row m-3">
+							<label class="col-form-label col-4">Due Date</label>
+							<div class="col-8">
+								<input type="date" name="dueDate" placeholder="Due date" required>
+							</div>
+						</div>
+						<div class="form-group row m-3">
+							<label class="col-form-label col-4">Priority</label>
+							<div class="col-8">
+								<input type="text" class="form-control" name="priority" required minlength="1" maxlength="20">
+<!--								TODO:CHECKBOX-->
+							</div>
+						</div>
+						<input type="hidden" name="status" th:value="TODO"/>
+						<input type="hidden" name="user" th:value="${userId}"/>
+						<div>
+							<button type="submit" class="btn btn-primary">Add new item</button>
+						</div>
+					</div>
+				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -122,6 +152,91 @@
 		</div>
 	</div>
 </div>
+
+<div class="modal fade" id="edit-modal" tabindex="-1" aria-labelledby="edit-modal-title" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="edit-modal-title">Edit Item</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<form th:action="@{/update}" th:object="${item}" method="PUT" style="max-width: 600px; margin: 0 auto;">
+					<div class="m-3">
+						<div class="form-group row m-3">
+							<label class="col-form-label col-4"">Name</label>
+							<div class="col-8">
+								<input type="text" class="form-control" id="nameEdit" name="nameEdit" required minlength="1" maxlength="100">
+							</div>
+						</div>
+						<div class="form-group row m-3">
+							<label class="col-form-label col-4">Due Date</label>
+							<div class="col-8">
+								<input type="date" id="dueDateEdit" name="dueDateEdit" placeholder="Due date" required>
+							</div>
+						</div>
+						<div class="form-group row m-3">
+							<label class="col-form-label col-4">Priority</label>
+							<div class="col-8">
+								<input type="text" class="form-control" id="priorityEdit" name="priorityEdit" required minlength="1" maxlength="20">
+								<!--								TODO:CHECKBOX-->
+							</div>
+						</div>
+						<input type="hidden" id="statusEdit" name="statusEdit" th:value="TODO"/>
+						<input type="hidden" id="userEdit" name="userEdit" th:value="${userId}"/>
+						<div>
+							<button type="submit" class="btn btn-primary">Save item</button>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Delete Item</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete this item?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-danger">Delete</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!--<div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">-->
+<!--	<div class="modal-dialog modal-dialog-centered">-->
+<!--		<div class="modal-content">-->
+<!--			<div class="modal-header">-->
+<!--				<h5 class="modal-title" id="modal-title">Modal title</h5>-->
+<!--				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--			</div>-->
+<!--			<div class="modal-body">-->
+<!--				<p>Modal body text goes here.</p>-->
+<!--			</div>-->
+<!--			<div class="modal-footer">-->
+<!--				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
+<!--				<button type="button" class="btn btn-primary">Save changes</button>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</div>-->
+
+
+
+<script src=https://code.jquery.com/jquery-3.6.0.min.js></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous">
@@ -134,6 +249,28 @@
 		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
 		crossorigin="anonymous">
 </script>
+<script type="text/javascript">
+	$('document').ready(function() {
+		$("#buttonEdit").on('click',function(event){
+
+			event.preventDefault();
+
+			var href = $(this).attr('href');
+
+			$.get(href, function(item, status){
+				$('#nameEdit').val(item.id)
+				$('#dueDateEdit').val(item.dueDate)
+				$('#priorityEdit').val(item.priority)
+				$('#statusEdit').val(item.status)
+				$('#userEdit').val(item.user)
+
+			});
+
+			$('#edit-modal').modal('show');
+		});
+	});
+</script>
+
 
 </body>
 
