Added deleting items. Started drag and drop of items.

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,63 +8,55 @@
 	<link rel="stylesheet" href="style.css">
 	<title>To Do List</title>
 </head>
+
 <body>
 <div class="container">
 	<div class="row">
-		<div class="col-sm">
+		<div class="col col-sm" id="col-1">
 			<div class="card-header">
 				TO DO
 			</div>
 			<div class="card text-white bg-primary mb-3" th:each="item : ${items}"
-				 th:if="${item.status} == 'TODO' and ${item.user.id} == ${userId}">
+				 th:if="${item.status} == 'TODO' and ${item.user.id} == ${userId}" draggable="true" id="card-1">
 				<div class="card-body">
-					<a class="stretched-link" href="/"></a>
 					<h5 class="card-title" th:text="${item.name}"></h5>
 					<h6 class="card-subtitle mb-2 text-muted"
 						th:text="${#temporals.format(item.dueDate, 'dd.MM.yyyy')}">Card subtitle</h6>
 					<p class="card-text" th:text="${item.priority}"></p>
-					<a class="btn btn-primary btnEdit" th:href="@{/getOne/(id=${item.id})}">Edit</a>
-					<a th:href="@{/delete(id=${item.id})}"
-					   data-bs-toggle="modal" data-bs-target="#delete-modal"
-					   class="btn btn-warning">Delete</a>
+					<a class="btn btn-primary btn-edit" th:href="@{/getOne/(id=${item.id})}">Edit</a>
+					<a class="btn btn-danger btn-delete" th:href="@{/delete/(id=${item.id})}">Delete</a>
 				</div>
 			</div>
 		</div>
-		<div class="col-sm">
+		<div class="col col-sm" id="col-2">
 			<div class="card-header">
-				TO DO
+				DOING
 			</div>
 			<div class="card text-white bg-primary mb-3" th:each="item : ${items}"
-				 th:if="${item.status} == 'DOING' and ${item.user.id} == ${userId}">
+				 th:if="${item.status} == 'DOING' and ${item.user.id} == ${userId}" draggable="true" id="card-2">
 				<div class="card-body">
-					<a class="stretched-link" href="/"></a>
 					<h5 class="card-title" th:text="${item.name}"></h5>
 					<h6 class="card-subtitle mb-2 text-muted"
 						th:text="${#temporals.format(item.dueDate, 'dd.MM.yyyy')}">Card subtitle</h6>
 					<p class="card-text" th:text="${item.priority}"></p>
-					<a class="btn btn-primary btnEdit" th:href="@{/getOne/(id=${item.id})}">Edit</a>
-					<a th:href="@{/delete(id=${item.id})}"
-					   data-bs-toggle="modal" data-bs-target="#delete-modal"
-					   class="btn btn-warning">Delete</a>
+					<a class="btn btn-primary btn-edit" th:href="@{/getOne/(id=${item.id})}">Edit</a>
+					<a class="btn btn-danger btn-delete" th:href="@{/delete/(id=${item.id})}">Delete</a>
 				</div>
 			</div>
 		</div>
-		<div class="col-sm">
+		<div class="col col-sm" id="col-3">
 			<div class="card-header">
-				TO DO
+				DONE
 			</div>
 			<div class="card text-white bg-primary mb-3" th:each="item : ${items}"
-				 th:if="${item.status} == 'DONE' and ${item.user.id} == ${userId}">
+				 th:if="${item.status} == 'DONE' and ${item.user.id} == ${userId}" draggable="true" id="card-3">
 				<div class="card-body">
-					<a class="stretched-link" href="/"></a>
 					<h5 class="card-title" th:text="${item.name}"></h5>
 					<h6 class="card-subtitle mb-2 text-muted"
 						th:text="${#temporals.format(item.dueDate, 'dd.MM.yyyy')}">Card subtitle</h6>
 					<p class="card-text" th:text="${item.priority}"></p>
-					<a class="btn btn-primary btnEdit" th:href="@{/getOne/(id=${item.id})}">Edit</a>
-					<a th:href="@{/delete(id=${item.id})}"
-					   data-bs-toggle="modal" data-bs-target="#delete-modal"
-					   class="btn btn-warning">Delete</a>
+					<a class="btn btn-primary btn-edit" th:href="@{/getOne/(id=${item.id})}">Edit</a>
+					<a class="btn btn-danger btn-delete" th:href="@{/delete/(id=${item.id})}">Delete</a>
 				</div>
 			</div>
 		</div>
@@ -141,8 +134,7 @@
 							<div class="col-8">
 								<select class="form-select" name="priority" required>
 									<option th:each="priority : ${T(com.example.ToDoList.entity.Priority).values()}"
-											th:value="${priority}"
-											th:text="${priority}"></option>
+											th:value="${priority}" th:text="${priority}"></option>
 								</select>
 							</div>
 						</div>
@@ -178,8 +170,8 @@
 						<div class="form-group row m-3">
 							<label class="col-form-label col-4">Name</label>
 							<div class="col-8">
-								<input type="text" class="form-control" id="nameEdit" name="name" required minlength="1"
-									   maxlength="100">
+								<input type="text" class="form-control" id="nameEdit" name="name" required
+									   minlength="1" maxlength="100">
 							</div>
 						</div>
 						<div class="form-group row m-3">
@@ -193,8 +185,7 @@
 							<div class="col-8">
 								<select class="form-select" id="priorityEdit" name="priority" required>
 									<option th:each="priority : ${T(com.example.ToDoList.entity.Priority).values()}"
-											th:value="${priority}"
-											th:text="${priority}"></option>
+											th:value="${priority}" th:text="${priority}"></option>
 								</select>
 							</div>
 						</div>
@@ -218,15 +209,15 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Delete Item</h5>
+				<h5 class="modal-title" id="exampleModalLabel">Confirm Delete</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
 				Are you sure you want to delete this item?
 			</div>
 			<div class="modal-footer">
+				<a href="" type="button" class="btn btn-danger" id="delRef">Delete</a>
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-danger">Delete</button>
 			</div>
 		</div>
 	</div>
@@ -234,41 +225,132 @@
 
 <script src=https://code.jquery.com/jquery-3.6.0.min.js></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous">
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-		crossorigin="anonymous">
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-		crossorigin="anonymous">
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
 </script>
 <script type="text/javascript">
-	$('document').ready(function() {
-		$(".btnEdit").on('click',function(event){
+		$('document').ready(function () {
+			$(".btn-edit").on('click', function (event) {
 
-			event.preventDefault();
+				event.preventDefault();
 
-			var href = $(this).attr('href');
+				var href = $(this).attr('href');
 
-			$.get(href, function(item, status){
-				$('#idEdit').val(item.id)
-				$('#nameEdit').val(item.name)
-				$('#dueDateEdit').val(item.dueDate)
-				$('#priorityEdit').val(item.priority)
-				$('#statusEdit').val(item.status)
-				$('#userEdit').val(item.user)
+				$.get(href, function (item, status) {
+					$('#idEdit').val(item.id)
+					$('#nameEdit').val(item.name)
+					$('#dueDateEdit').val(item.dueDate)
+					$('#priorityEdit').val(item.priority)
+					$('#statusEdit').val(item.status)
+					$('#userEdit').val(item.user)
 
+				});
+
+				$('#edit-modal').modal('show');
 			});
 
-			$('#edit-modal').modal('show');
+			$(".btn-delete").on('click', function (event) {
+
+				event.preventDefault();
+
+				var href = $(this).attr('href');
+
+				$('#delete-modal #delRef').attr('href', href);
+				$('#delete-modal').modal('show');
+			});
 		});
-	});
+
+
+document.addEventListener('dragstart', function(){
+    beingDragged(event);
+});
+document.addEventListener('dragend', function(){
+    dragEnd(event);
+});
+document.addEventListener('dragover', function(){
+   var beingDragged = document.querySelector(".dragging")
+  if (event.target.matches('.card')) {
+        if (beingDragged.classList.contains('card')) {
+          allowDrop(event);
+        }
+  }
+  if (event.target.matches('.col')) {
+    if (beingDragged.classList.contains('card')) {
+          colDraggedOver(event);
+    }
+    if (beingDragged.classList.contains('col')) {
+      allowDrop(event);
+    }
+  }
+});
+function beingDragged(ev) {
+  var draggedEl = ev.target;
+  draggedEl.classList.add("dragging");
+}
+function dragEnd(ev) {
+  var draggedEl = ev.target;
+  draggedEl.classList.remove("dragging");
+}
+function allowDrop(ev) {
+  ev.preventDefault();
+  //var project = document.getElementById('project');
+  var dragOver = ev.target;
+  var dragOverParent = dragOver.parentElement;
+  var beingDragged = document.querySelector(".dragging");
+  var draggedParent = beingDragged.parentElement;
+  var project = document.getElementById("project");
+  var draggedIndex = whichChild(beingDragged);
+  var dragOverIndex = whichChild(dragOver);
+  if (draggedParent === dragOverParent) {
+    if (draggedIndex < dragOverIndex) {
+      draggedParent.insertBefore(dragOver, beingDragged);
+    }
+    if (draggedIndex > dragOverIndex) {
+      draggedParent.insertBefore(dragOver, beingDragged.nextSibling);
+    }
+  }
+  if (draggedParent !== dragOverParent) {
+    dragOverParent.insertBefore(beingDragged, dragOver);
+  }
+}
+function colDraggedOver(event) {
+  var dragOver = event.target;
+  var beingDragged = document.querySelector(".dragging");
+  var draggedParent = beingDragged.parentElement;
+  if (draggedParent.id !== dragOver.id && draggedParent.classList.contains('col') && dragOver.classList.contains('col')) {
+    if (dragOver.childElementCount == 0 || event.clientY > dragOver.children[dragOver.childElementCount - 1].offsetTop) {
+      dragOver.appendChild(beingDragged)
+    }
+  }
+
+}
+function drag(ev) {
+  ev.dataTransfer.setData("text", ev.target.id);
+}
+
+function drop(ev) {
+  ev.preventDefault();
+  var data = ev.dataTransfer.getData("text");
+  ev.target.appendChild(document.getElementById(data));
+}
+function whichChild(el) {
+  var i = 0;
+  while ((el = el.previousSibling) != null) ++i;
+  return i;
+}
+
+
+
+
+
+
+
 </script>
 
 
 </body>
-
-
